[package]
name = "butter-video"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
av-metrics-decoders = { version = "0.1.7", default-features = false, features = [
    "ffmpeg",
] }
average = "0.13.1"
clap = "3.2.0"
image = { version = "0.24", default-features = false, features = ["png"] }
tempfile = "3.2.0"
yuv = "0.1.4"
